--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,8 +7,8 @@
 <div class="row">
     <div class="col-xs-12">
         <!-- [recipe] is the recipe property in app-recipe-item component -->
-        <app-recipe-item *ngFor="let recipeElement of recipes" [recipe]="recipeElement"
-        (recipeSelected)="onRecipeSelected(recipeElement)"></app-recipe-item>
+        <!-- dont need this because of services: (recipeSelected)="onRecipeSelected(recipeElement)" -->
+        <app-recipe-item *ngFor="let recipeElement of recipes" [recipe]="recipeElement"></app-recipe-item>
     </div>
 </div>
 
