--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-md-5">
-    <app-recipe-list (recipeWasSelected)="selectedRecipe = $event"></app-recipe-list>
+    <!-- (recipeWasSelected)="selectedRecipe = $event" - not needed because of service -->
+    <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-md-7">
     <!-- only display if selectedRecipe is set, else display infoText template -->
