--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,7 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-edit (ingredientAdded)="onIngredientAdded($event)"></app-shopping-edit>
+    <!--  (ingredientAdded)="onIngredientAdded($event)" - dont have to listen anymore because of service -->
+    <app-shopping-edit></app-shopping-edit>
     <hr>
     <ul class="list-group">
       <a style="cursor:pointer;" class="list-group-item" *ngFor="let ingredient of ingredients">
