--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,15 @@
 <!-- when the featureSelected emitter event happens in app-header, we run onNavigate in App COmponent -->
-<app-header (featureSelected)="onNavigate($event)"></app-header>
+
+<!-- (featureSelected)="onNavigate($event)" -- not needed because of routing -->
+<app-header></app-header>
 <div class="container">
   <div class="row">
     <div class="col-md-12">
       <!-- display only one component depending on loaded feature -->
-      <app-recipes *ngIf="loadedFeature === 'recipe'"></app-recipes>
-      <app-shopping-list *ngIf="loadedFeature === 'shopping-list'"></app-shopping-list>
+      <!-- <app-recipes *ngIf="loadedFeature === 'recipe'"></app-recipes>
+      <app-shopping-list *ngIf="loadedFeature === 'shopping-list'"></app-shopping-list> -->
+
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
