--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,7 @@
 <div class="row">
     <div class="col-xs-12">
-        <button class="btn btn-success">New Recipe</button>
+        <!-- [routerLink]="['/recipes', 'new']" -->
+        <button class="btn btn-success" (click)="onNewRecipe()" >New Recipe</button>
     </div>
 </div>
 <hr>
@@ -8,7 +9,7 @@
     <div class="col-xs-12">
         <!-- [recipe] is the recipe property in app-recipe-item component -->
         <!-- dont need this because of services: (recipeSelected)="onRecipeSelected(recipeElement)" -->
-        <app-recipe-item *ngFor="let recipeElement of recipes" [recipe]="recipeElement"></app-recipe-item>
+        <app-recipe-item *ngFor="let recipeElement of recipes, let i = index" [recipe]="recipeElement" [index]="i"></app-recipe-item>
     </div>
 </div>
 
