--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -5,9 +5,11 @@
   </div>
   <div class="col-md-7">
     <!-- only display if selectedRecipe is set, else display infoText template -->
-    <app-recipe-detail *ngIf="selectedRecipe; else infoText" [recipe]="selectedRecipe"></app-recipe-detail>
+    <!-- <app-recipe-detail *ngIf="selectedRecipe; else infoText" [recipe]="selectedRecipe"></app-recipe-detail>
     <ng-template #infoText>
       <p>Please select a Recipe!</p>
-    </ng-template>
+    </ng-template> -->
+
+    <router-outlet></router-outlet>
   </div>
 </div>
